fixed alignment on chat headers

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -241,6 +241,11 @@ p {
   transform: translateY(-50%);
 }*/
 
+.chat-info {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
 /* makes it so that list items break words to new line if they're too long */
 li {
 	word-wrap: break-word;
